added styling for navbar

--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>flexbox lab Themebau</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <nav class="nav-container">
+    <div class="nav-site-name">
+        <div class="title-container">
+            <h3>Themebau.</h3>
+        </div>
+        
+    </div>
+    <div>
+        <ul class="nav-list">
+            <li>home</li>
+            <li>projects</li>
+            <li>pages</li>
+            <li>contact</li>
+            <li class="purchace-button">purchace</li>
+        </ul> 
+    </div>
+ </nav>
+
  
 </body>
 </html>
